--- a/src/Web/ClientApp/package.json
+++ b/src/Web/ClientApp/package.json
@@ -15,19 +15,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.9",
     "@angular/compiler": "^15.2.9",
     "@angular/core": "^15.2.9",
     "@angular/forms": "^15.2.9",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/platform-server": "^15.2.9",
     "@angular/router": "^15.2.9",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
-    "ngx-bootstrap": "10.2.0",
     "jquery": "^3.6.4",
-    "@popperjs/core": "^2.11.8",
+    "ngx-bootstrap": "10.2.0",
     "run-script-os": "^1.1.6",
     "rxjs": "~7.8.1",
     "tslib": "^2.5.0",
