--- a/src/Web/ClientApp/package.json
+++ b/src/Web/ClientApp/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "^15.2.9",
     "@angular/router": "^15.2.9",
     "@popperjs/core": "^2.11.8",
+    "angular-material-icons": "^0.7.1",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
@@ -53,6 +54,5 @@
   "overrides": {
     "autoprefixer": "10.4.5",
     "webpack": "5.81.0"
-  },
-  "optionalDependencies": {}
+  }
 }
